--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="header-container container">
         <nav class="navigation">
           <a href="./index.html" class="header-logo link">Web<span class="header-logo-studio">Studio</span></a>
-          <ul class="list">
+          <ul class="nav-list list">
             <li><a href="./index.html" class="nav link">Studio</a></li>
         
             <li><a href="./portfolio.html" class="nav link">Portfolio</a></li>
@@ -54,31 +54,31 @@
         <div class="container">
           <h2 hidden>Features</h2>
           <ul class="
-          page-nav list">
-            <li>
+          features-list list">
+            <li class="features-item">
               <h3 class="feature-title">Strategy</h3>
-              <p class="text"
+              <p class="feature-text text"
                 >Our goal is to identify the business problem to walk away with the perfect and
                 creative solution.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="feature-title">Punctuality</h3>
-              <p class="text"
+              <p class="feature-text text"
                 >Bring the key message to the brand's audience for the best price within the shortest
                 possible time.</p
               >
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="feature-title">Diligence</h3>
-              <p class="text"
+              <p class="feature-text text"
                 >Research and confirm brands that present the strongest digital growth opportunities
                 and minimize risk.</p
               >
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="feature-title">Technologies</h3>
-              <p class="text"
+              <p class="feature-text text"
                 >Design practice focused on digital experiences. We bring forth a deep passion for
                 problem-solving.</p
               >
