--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
         </div>
       </section>
 
-      <!-- Photos what we doing section -->
-      <section class=" section doing">
+      <!-- OUR WORK we doing section -->
+      <section class="section doing">
         <div class="container">
-          <h2 class="title">What are we doing </h2>
+          <h2 class=".our-work-title title">What are we doing </h2>
           <ul class="our-work list">
             <li
               ><img
@@ -119,28 +119,28 @@
 
       <!-- Our Team section -->
       <section class="section our_team">  
-        <div class="container">
+        <div class="team-container container">
           <h2 class="title">Our Team</h2>
-          <ul class="list">
-            <li class="team-list">
+          <ul class="team-list list">
+            <li class="team-item">
               <img src="./images/our_team/img-1.jpg" alt="Man with beard" width="264" height="260" />
               <h3 class="title-name">Mark Guerrero</h3>
-              <p class="text">Product Designer</p>
+              <p class="team-text text">Product Designer</p>
             </li>
-            <li class="team-list">
+            <li class="team-item">
               <img src="./images/our_team/img-2.jpg" alt="Handsome man" width="264" height="260" />
               <h3 class="title-name">Tom Ford</h3>
-              <p class="text">Frontend Developer</p>
+              <p class="team-text text">Frontend Developer</p>
             </li>
-            <li class="team-list">
+            <li class="team-item">
               <img src="./images/our_team/img-3.jpg" alt="Beautiful girl" width="264" height="260" />
               <h3 class="title-name">Camila Garcia</h3>
-              <p class="text">Marketing</p>
+              <p class="team-text text">Marketing</p>
             </li>
-            <li class="team-list">
+            <li class="team-item">
               <img src="./images/our_team/img-4.jpg" alt="Smiling man" width="264" height="260" />
               <h3 class="title-name">Daniel Wilson</h3>
-              <p class="text">UI Designer</p>
+              <p class="team-text text">UI Designer</p>
             </li>
           </ul>
         </div>
