--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <!-- OUR WORK we doing section -->
       <section class="section doing">
-        <div class="container">
+        <div class="doing-container container">
           <h2 class=".our-work-title title">What are we doing </h2>
           <ul class="our-work list">
             <li
