--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
  <main>
   <!-- Title that would be hidden-->
 
-  <section>
+  <section class="photo-section">
 
     <div class="container">
    
@@ -61,7 +61,7 @@
           <!--Photo Section -->
 
   
-                <ul class="portfolio-photos ">
+                <ul class="portfolio-card-set ">
                     <li class="portfolio-card">
                       <a href="" class="portfolio-link">
                        <img class="photo" src="./images/portfolio_images/img-1.jpg" alt="Violet screens of banking apps" width="360"/>
