--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main>
       <!-- Hero section -->
       <section class="hero">
-        <div class="container">
+        <div class="hero-section container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn button" type="button">Order Service</button>
         </div>
