--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- Header section -->
-    <header class="header">
+    <header>
       <div class="header-container container">
         <nav class="navigation">
           <a href="./index.html" class="header-logo link">Web<span class="header-logo-studio">Studio</span></a>
@@ -50,9 +50,9 @@
       </section>
 
       <!-- Features section -->
-      <section class="section features">
+      <section class="section-features">
         <div class="container">
-          <h2 hidden>Features</h2>
+          <h2.visually-hidden></h2.visually-hidden>
           <ul class="
           features-list list">
             <li class="features-item">
@@ -88,9 +88,9 @@
       </section>
 
       <!-- OUR WORK we doing section -->
-      <section class="section doing">
+      <section class="section-doing">
         <div class="doing-container container">
-          <h2 class=".our-work-title title">What are we doing </h2>
+          <h2 class="our-work-title title">What are we doing </h2>
           <ul class="our-work list">
             <li
               ><img
@@ -118,29 +118,37 @@
       </section>
 
       <!-- Our Team section -->
-      <section class="section our_team">  
+      <section class="section-our_team">  
         <div class="team-container container">
           <h2 class="title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
               <img src="./images/our_team/img-1.jpg" alt="Man with beard" width="264" height="260" />
-              <h3 class="title-name">Mark Guerrero</h3>
-              <p class="team-text text">Product Designer</p>
+              <div class="team-card">
+                <h3 class="title-name">Mark Guerrero</h3>
+                <p class="team-text text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/our_team/img-2.jpg" alt="Handsome man" width="264" height="260" />
-              <h3 class="title-name">Tom Ford</h3>
-              <p class="team-text text">Frontend Developer</p>
+              <div class="team-card">
+                <h3 class="title-name">Tom Ford</h3>
+                <p class="team-text text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/our_team/img-3.jpg" alt="Beautiful girl" width="264" height="260" />
-              <h3 class="title-name">Camila Garcia</h3>
-              <p class="team-text text">Marketing</p>
+              <div class="team-card">
+                <h3 class="title-name">Camila Garcia</h3>
+                <p class="team-text text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img src="./images/our_team/img-4.jpg" alt="Smiling man" width="264" height="260" />
-              <h3 class="title-name">Daniel Wilson</h3>
-              <p class="team-text text">UI Designer</p>
+              <div class="team-card">
+                <h3 class="title-name">Daniel Wilson</h3>
+                <p class="team-text text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
