--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- Header section -->
-    <header>
+    <header class="header">
       <div class="header-container container">
         <nav class="navigation">
           <a href="./index.html" class="header-logo link">Web<span class="header-logo-studio">Studio</span></a>
@@ -27,7 +27,7 @@
             <li><a href="./index.html" class="nav link">Studio</a></li>
         
             <li><a href="./portfolio.html" class="nav link">Portfolio</a></li>
-            <li><a href="" class="nav link">Contacts</a></li>
+            <li><a href="" class="nav last link">Contacts</a></li>
           </ul>
         </nav>
         <address class="address">
