--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <!-- Features section -->
       <section class="section-features">
         <div class="container">
-          <h2.visually-hidden></h2.visually-hidden>
+          <h2 class="visually-hidden"></h2>
           <ul class="
           features-list list">
             <li class="features-item">
@@ -92,21 +92,21 @@
         <div class="doing-container container">
           <h2 class="our-work-title title">What are we doing </h2>
           <ul class="our-work list">
-            <li
+            <li class="our-work-item"
               ><img
                 src="./images/our_products/photo1.jpg"
                 alt="computer screen with diagrams"
                 width="360"
                 height="300"
             /></li>
-            <li
+            <li class="our-work-item"
               ><img
                 src="./images/our_products/photo2.jpg"
                 alt="four phone screens with apps"
                 width="360"
                 height="300"
             /></li>
-            <li
+            <li class="our-work-item"
               ><img
                 src="./images/our_products/photo3.jpg"
                 alt="phone in hands"
@@ -118,8 +118,8 @@
       </section>
 
       <!-- Our Team section -->
-      <section class="section-our_team">  
-        <div class="team-container container">
+      <section class="section-our-team">  
+        <div class="container">
           <h2 class="title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
