--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
 
     <div class="container">
    
-        <h1 .visually-hidden></h1>
+        <h1 class="visually-hidden"></h1>
   
         <ul class="nav-list-buttons list">
           <li><button type="button" class="portfolio-btn button">All</button></li>
