--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
    
 <!--Normalize-->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css"/>
     
@@ -93,21 +93,21 @@
           <h2 class="our-work-title title">What are we doing </h2>
           <ul class="our-work list">
             <li class="our-work-item"
-              ><img
+              ><img class="card-img"
                 src="./images/our_products/photo1.jpg"
                 alt="computer screen with diagrams"
                 width="360"
                 height="300"
             /></li>
             <li class="our-work-item"
-              ><img
+              ><img class="card-img"
                 src="./images/our_products/photo2.jpg"
                 alt="four phone screens with apps"
                 width="360"
                 height="300"
             /></li>
             <li class="our-work-item"
-              ><img
+              ><img class="card-img"
                 src="./images/our_products/photo3.jpg"
                 alt="phone in hands"
                 width="360"
@@ -123,28 +123,28 @@
           <h2 class="title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
-              <img src="./images/our_team/img-1.jpg" alt="Man with beard" width="264" height="260" />
+              <img class="card-img" src="./images/our_team/img-1.jpg" alt="Man with beard" width="264" height="260" />
               <div class="team-card">
                 <h3 class="title-name">Mark Guerrero</h3>
                 <p class="team-text text">Product Designer</p>
               </div>
             </li>
             <li class="team-item">
-              <img src="./images/our_team/img-2.jpg" alt="Handsome man" width="264" height="260" />
+              <img class="card-img" src="./images/our_team/img-2.jpg" alt="Handsome man" width="264" height="260" />
               <div class="team-card">
                 <h3 class="title-name">Tom Ford</h3>
                 <p class="team-text text">Frontend Developer</p>
               </div>
             </li>
             <li class="team-item">
-              <img src="./images/our_team/img-3.jpg" alt="Beautiful girl" width="264" height="260" />
+              <img class="card-img" src="./images/our_team/img-3.jpg" alt="Beautiful girl" width="264" height="260" />
               <div class="team-card">
                 <h3 class="title-name">Camila Garcia</h3>
                 <p class="team-text text">Marketing</p>
               </div>
             </li>
             <li class="team-item">
-              <img src="./images/our_team/img-4.jpg" alt="Smiling man" width="264" height="260" />
+              <img class="card-img" src="./images/our_team/img-4.jpg" alt="Smiling man" width="264" height="260" />
               <div class="team-card">
                 <h3 class="title-name">Daniel Wilson</h3>
                 <p class="team-text text">UI Designer</p>
