--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
                 <ul class="portfolio-card-set ">
                     <li class="portfolio-card">
                       <a href="" class="portfolio-link">
-                       <img class="photo" src="./images/portfolio_images/img-1.jpg" alt="Violet screens of banking apps" width="360"/>
+                       <img class="card-img" src="./images/portfolio_images/img-1.jpg" alt="Violet screens of banking apps" width="360"/>
                       <div class="portfolio-card-content">
                         <h2 class="photo-title">Banking App Interface Concept</h2>
                         <p class="portfolio-text">App</p>
@@ -73,7 +73,7 @@
                     </li>
                     <li class="portfolio-card">
                       <a href="" class="portfolio-link">
-                      <img class="photo" src="./images/portfolio_images/img-2.jpg" alt="The phone paying by QR code" width="360"/>
+                      <img class="card-img" src="./images/portfolio_images/img-2.jpg" alt="The phone paying by QR code" width="360"/>
                       <div class="portfolio-card-content">
                         <h2 class="photo-title">Cashless Payment</h2>
                         <p class="portfolio-text">Marketing</p>
@@ -82,7 +82,7 @@
                     </li>
                     <li class="portfolio-card">
                       <a href="" class="portfolio-link">
-                      <img class="photo" src="./images/portfolio_images/img-3.jpg" alt="Synchronized computer and phone with the program of meditstion" width="360"/>
+                      <img class="card-img" src="./images/portfolio_images/img-3.jpg" alt="Synchronized computer and phone with the program of meditstion" width="360"/>
                       <div class="portfolio-card-content">
                         <h2 class="photo-title">Meditation App</h2>
                         <p class="portfolio-text">App</p>
@@ -93,7 +93,7 @@
                
                   <li class="portfolio-card">
                     <a href="" class="portfolio-link">
-                  <img class="photo" src="./images/portfolio_images/img-4.jpg" alt="Phone navigation helps driver during riding" width="360"/>
+                  <img class="card-img" src="./images/portfolio_images/img-4.jpg" alt="Phone navigation helps driver during riding" width="360"/>
                   <div class="portfolio-card-content">
                     <h2 class="photo-title">Taxi Service</h2>
                     <p class="portfolio-text">Marketing</p>
@@ -103,7 +103,7 @@
                 </li>
                 <li class="portfolio-card">
                   <a href="" class="portfolio-link">
-                  <img class="photo" src="./images/portfolio_images/img-5.jpg" alt="Several beautiful images of the moon on the phone screen" width="360"/>
+                  <img class="card-img" src="./images/portfolio_images/img-5.jpg" alt="Several beautiful images of the moon on the phone screen" width="360"/>
                   <div class="portfolio-card-content">
                     <h2 class="photo-title">Screen Illustrations</h2>
                     <p class="portfolio-text">Design</p>
@@ -113,7 +113,7 @@
                 </li>
                 <li class="portfolio-card">
                   <a href="" class="portfolio-link">
-                  <img class="photo" src="./images/portfolio_images/img-6.jpg" alt="Smiling girl is listening something on her phone by headphones" width="360"/>
+                  <img class="card-img" src="./images/portfolio_images/img-6.jpg" alt="Smiling girl is listening something on her phone by headphones" width="360"/>
                   <div class="portfolio-card-content">
                     <h2 class="photo-title">Online Courses</h2>
                     <p class="portfolio-text">Marketing</p>
@@ -124,7 +124,7 @@
              
                       <li class="portfolio-card">
                         <a href="" class="portfolio-link">
-                      <img class="photo" src="./images/portfolio_images/img-7.jpg" alt="Several screens show different part of the story promt of some gadget" width="360"/>
+                      <img class="card-img" src="./images/portfolio_images/img-7.jpg" alt="Several screens show different part of the story promt of some gadget" width="360"/>
                       <div class="portfolio-card-content">
                         <h2 class="photo-title">Instagram Stories Concept</h2>
                         <p class="portfolio-text">Design</p>
@@ -134,7 +134,7 @@
                     </li>
                     <li class="portfolio-card">
                       <a href="" class="portfolio-link">
-                      <img class="photo" src="./images/portfolio_images/img-8.jpg" alt="Woman among green leaves carrying vegetables in the bag" width="360"/>
+                      <img class="card-img" src="./images/portfolio_images/img-8.jpg" alt="Woman among green leaves carrying vegetables in the bag" width="360"/>
                       <div class="portfolio-card-content">
                         <h2 class="photo-title">Organic Food</h2>
                         <p class="portfolio-text">Web Site</p>
@@ -144,7 +144,7 @@
                     </li>
                     <li class="portfolio-card">
                       <a href="" class="portfolio-link">
-                      <img class="photo" src="./images/portfolio_images/img-9.jpg" alt="The process of pouring a coffee to the cup" width="360"/>
+                      <img class="card-img" src="./images/portfolio_images/img-9.jpg" alt="The process of pouring a coffee to the cup" width="360"/>
                       <div class="portfolio-card-content">
                         <h2 class="photo-title">Fresh Coffee</h2>
                         <p class="portfolio-text">Web Site</p>
