--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <!-- Footer section-->
     <footer class="footer">
       <div class="container">
-        <a class="footer-link" href="./index.html" class="header-logo link">Web<span class="footer-logo-studio">Studio</span></a>
+        <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-studio">Studio</span></a>
         <p class="footer-text"
           >Increase the flow of customers and sales for your business with digital marketing & growth
           solutions.
