--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <!-- Features section -->
       <section class="section-features">
         <div class="container">
-          <h2 class="visually-hidden"></h2>
+          <h2 class="visually-hidden">The first page content</h2>
           <ul class="
           features-list list">
             <li class="features-item">
